# insiderweek

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  user.py
app/templates/: base.html  chart.html  file_upload_form.html  index.html  profile.html  show_chart.html  success.html
app/uploads/: __init__.py
app/views/: auth.py  main.py
database/: __init__.py  app.py  db.sqlite
database/models/: models.py
dramatiq_worker/: dramatiq_worker.py
utils/: create_chart.py  csv_reader.py
